--- a/src/SncSoftware.Extensions.Dapper/SncSoftware.Extensions.Dapper.csproj
+++ b/src/SncSoftware.Extensions.Dapper/SncSoftware.Extensions.Dapper.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
       <PackageReference Include="Npgsql" Version="9.0.2" />
       <PackageReference Include="Npgsql.NetTopologySuite" Version="9.0.2" />
     </ItemGroup>
