add get all test

--- a/tests/SncSoftware.Extensions.Dapper.ServiceTests/SncSoftware.Extensions.Dapper.ServiceTests.csproj
+++ b/tests/SncSoftware.Extensions.Dapper.ServiceTests/SncSoftware.Extensions.Dapper.ServiceTests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="4.18.1" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="dbup-postgresql" Version="5.0.40" />
         <PackageReference Include="FluentAssertions" Version="7.0.0" />
