add get all tests with new db. Additional tidying up

--- a/tests/SncSoftware.Extensions.Dapper.ServiceTests/SncSoftware.Extensions.Dapper.ServiceTests.csproj
+++ b/tests/SncSoftware.Extensions.Dapper.ServiceTests/SncSoftware.Extensions.Dapper.ServiceTests.csproj
@@ -35,7 +35,11 @@
 
     <ItemGroup>
       <None Remove="Infrastructure\Persistence\Migrations\20241219163300_CreateTestEntitiesTable.sql" />
-      <EmbeddedResource Include="Infrastructure\Persistence\Migrations\20241219163300_CreateTestEntitiesTable.sql" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Infrastructure\Persistence\Migrations\20241219163300_CreateAttributeEntitiesTable.sql" />
+      <EmbeddedResource Include="Infrastructure\Persistence\Migrations\20241219163300_CreateAttributeEntitiesTable.sql" />
     </ItemGroup>
 
 </Project>
